--- a/www/reset.html
+++ b/www/reset.html
@@ -68,3 +68,71 @@
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
 </div>
+
+<script>
+    //Utility function
+    function getQueryVariable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split('&');
+        for (var i = 0; i < vars.length; i++) {
+            var pair = vars[i].split('=');
+            if (decodeURIComponent(pair[0]) == variable) {
+                return decodeURIComponent(pair[1]);
+            }
+        }
+        return null;
+    }
+
+    //Read URI
+    var user_query_param = getQueryVariable("user");
+    var code_query_param = getQueryVariable("code");
+    var initial_path = window.location.hash;
+
+    GlobalState.prototype.set_password = function () {
+        var pwd = $("#reset_password").val()
+        if (pwd != $("#reset_retype").val()) {
+            this.show_page(pages.CLIENT_ERROR, "Error!", "Please enter passwords that match. Use at least one number, at least one letter, and at least six characters.", true);
+            return;
+        }
+        var valid_pwd = /(?=.*\d)(?=.*[a-zA-Z]).{6,}/.test(pwd);
+        if (!valid_pwd) {
+            this.show_page(pages.CLIENT_ERROR, "Error!", "Please enter a valid password. Use at least one number, at least one letter, and at least six characters.", true);
+            return;
+        }
+
+        var captcha = $("#reset_captcha_input").val();
+
+
+        this.show_page(pages.PROCESSING, "Setting password...", "Please wait...", false, true);
+        this.send(Message.encode({
+            type: Message.Type.SET_PASSWORD,
+            auth: {
+                user: this.user_name,
+                password: pwd
+            },
+            captcha: {
+                key: captcha
+            }
+        }).finish())
+    }
+
+    if (user_query_param && code_query_param) {
+        this.user_name = user_query_param;
+        $("#hidden_username1").val(user_query_param);
+        $("#hidden_username2").val(user_query_param);
+        this.show_page(pages.RESET, null, null, true, false);
+        this.show_page(pages.PROCESSING, "Validatings...", "Please be patient.", false);
+        this.send(Message.encode({
+            type: Message.Type.VALIDATE,
+            auth: {
+                user: user_query_param,
+                email: "",
+                password: "",
+            },
+            captcha: {
+                key: code_query_param
+            }
+        }).finish())
+        routed = true;
+    }
+</script>
