--- a/www/index.html
+++ b/www/index.html
@@ -655,6 +655,9 @@
             var x = document.getElementById("menu");
             x.className = "topnav";
         }
+        GlobalState.prototype.show_page = function (new_page) {
+            window.location.hash = new_page;
+        }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
             if (typeof $ == 'undefined' ||
