--- a/www/index.html
+++ b/www/index.html
@@ -656,6 +656,7 @@
             x.className = "topnav";
         }
         GlobalState.prototype.show_page = function (new_page) {
+            console.log("SHOWING PAGE: "+new_page);
             window.location.hash = new_page;
         }
         var on_resources_loaded = function () {
