--- a/www/index.html
+++ b/www/index.html
@@ -674,7 +674,7 @@
         window.onload = function () {
             on_resources_loaded();
             state.show_nav();
-            var page = window.location.hash ? window.location.hash : "home";
+            var page = window.location.hash ? window.location.hash.substring(1) : "home";
             $.get(page + '.html', function (response) {
                 $('.belownav').html(response);
             })
