--- a/www/edit.html
+++ b/www/edit.html
@@ -1,5 +1,5 @@
 <div class="row connected_content" id="edit"
-    style="display: none; position:absolute; overflow: auto; width:100%; height: 100%;">
+    style="position:absolute; overflow: auto; width:100%; height: 100%;">
     <div class="split row left" style="text-align:center;">
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <br>
-                <div id="algorithm_html" class="row" style="display:none;">
+                <div id="algorithm_html" class="row" style="display: none;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                         <textarea id="algorithm_html_textarea" rows="8" style="text-align:left; border: 1px solid #FFF;"
                             placeholder="Enter html here..." value=""></textarea>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <br>
-                <div id="algorithm_javascript" class="row" style="display:none;">
+                <div id="algorithm_javascript" class="row" style="display: none;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                         <textarea id="algorithm_javascript_textarea" rows="8"
                             style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
