--- a/www/reset.html
+++ b/www/reset.html
@@ -1,5 +1,5 @@
 <div class="row connected_content"
-    style="display: none; margin: 0px !important; z-index: 20; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0,0,0,.75);"
+    style="margin: 0px !important; z-index: 20; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0,0,0,.75);"
     id="reset">
     <div style="height: 7.5%;"></div>
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
