--- a/www/signup.html
+++ b/www/signup.html
@@ -1,4 +1,4 @@
-<div class="row connected_content" id="signup" style="display: none;">
+<div class="row connected_content" id="signup">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <form class="col-12 col-sm-12 col-md-10 col-lg-8">
