--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
     <div class="belownav" onclick="state.collapse_nav();">
     </div>
     <div class="row disconnected_content"
-    style="margin: 0px !important; z-index: 250; position:fixed; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
+    style="display:none; margin: 0px !important; z-index: 250; position:fixed; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
     id="processing">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
@@ -83,7 +83,7 @@
     </div>
 </div>
 <div class="row disconnected_content"
-    style="margin: 0px !important; z-index: 300; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
+    style="display:none; margin: 0px !important; z-index: 300; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
     id="client_error">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
@@ -107,7 +107,7 @@
     </div>
 </div>
 <div class="row disconnected_content"
-    style="margin: 0px !important; z-index: 400; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
+    style="display:none; margin: 0px !important; z-index: 400; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"
     id="server_error">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
