--- a/www/index.html
+++ b/www/index.html
@@ -715,7 +715,7 @@
             $.get(page, function (response) {
                 $('.belownav').html(response).fadeIn(1000);
                 this.refresh_captchas();
-            }.bind(this))
+            }.bind(state))
         });
     </script>
 </body>
