--- a/www/index.html
+++ b/www/index.html
@@ -703,9 +703,10 @@
         window.onload = function () {
             on_resources_loaded();
             var page = (window.location.hash ? window.location.hash.substring(1) : "home") + '.html';
-            $('.belownav').fadeOut(1000);
-            $.get(page, function (response) {
-                $('.belownav').html(response);
+            $('.belownav').fadeOut(1000).then(()=>{
+                $.get(page, function (response) {
+                    $('.belownav').html(response);
+                })
             })
         }
         
