--- a/www/index.html
+++ b/www/index.html
@@ -682,7 +682,7 @@
                     $(new_page).popover({
                     container: 'body'
                     })
-                })
+                }).fadeIn(1000);
             }
             else
                 window.location.hash = new_page;
