--- a/www/index.html
+++ b/www/index.html
@@ -681,8 +681,8 @@
                 $(function () {
                     $(new_page).popover({
                     container: 'body'
-                    })
-                }).fadeIn(1000);
+                    }).fadeIn(1000)
+                });
             }
             else
                 window.location.hash = new_page;
