--- a/www/index.html
+++ b/www/index.html
@@ -671,31 +671,31 @@
         }
         GlobalState.prototype.show_page = function (page = pages.HOME, message = null, subtext = null, opt_out = true, should_show_page = true, is_back_action = false) {
             this.collapse_nav();
-            console.log("SHOWING PAGE: "+new_page);
+            console.log("SHOWING PAGE: "+page);
 
-            if(new_page == pages.PROCESSING)
+            if(page == pages.PROCESSING)
             {
                 $("#menu").fadeOut(1000.);
                 $(function () {
-                    $(new_page).popover({
+                    $(page).popover({
                     container: 'body'
                     }).fadeIn(1000)
                 });
                 $(pages.CLIENT_ERROR).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
             }
-            else if(new_page == pages.CLIENT_ERROR)
+            else if(page == pages.CLIENT_ERROR)
             {
                 $("#menu").fadeOut(1000.);
                 $(function () {
-                    $(new_page).popover({
+                    $(page).popover({
                     container: 'body'
                     }).fadeIn(1000)
                 });
                 $(pages.PROCESSING).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
             }
-            else if(new_page == pages.SERVER_ERROR)
+            else if(page == pages.SERVER_ERROR)
             {
                 $("#menu").fadeOut(1000.);
                 $(function () {
@@ -707,7 +707,7 @@
                 $(pages.PROCESSING).fadeOut(1000.);
             }
             else
-                window.location.hash = new_page;
+                window.location.hash = page;
         }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
