--- a/www/index.html
+++ b/www/index.html
@@ -441,7 +441,7 @@
         }
 
 
-        GlobalState.prototype.refresh_content = function (new_page) {
+        GlobalState.prototype.refresh_content = function (page) {
                 switch (page) {
                     case pages.RECONNECT:
                         $("#menu").fadeOut(1000);
