--- a/www/index.html
+++ b/www/index.html
@@ -681,6 +681,7 @@
                     container: 'body'
                     }).fadeIn(1000)
                 });
+                this.refresh_content(page);
                 $(pages.CLIENT_ERROR).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
             }
@@ -692,6 +693,7 @@
                     container: 'body'
                     }).fadeIn(1000)
                 });
+                this.refresh_content(page);
                 $(pages.PROCESSING).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
             }
@@ -703,6 +705,7 @@
                     container: 'body'
                     }).fadeIn(1000)
                 });
+                this.refresh_content(page);
                 $(pages.CLIENT_ERROR).fadeOut(1000.);
                 $(pages.PROCESSING).fadeOut(1000.);
             }
