--- a/www/index.html
+++ b/www/index.html
@@ -211,7 +211,7 @@
         GlobalState.prototype.post_connect_load = function () {
             this.show_logged_out_content();
             this.hide_popovers();
-            this.show_page(window.location.hash);
+            $(".belownav").fadeIn(1000.);
         }
         
         GlobalState.prototype.wait_for_proto_and_connect = function () {
