--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav">
+    <div id="menu" class="topnav" style="display:hidden;">
         <a id="home_button" href="#home">Home</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
@@ -212,6 +212,7 @@
             this.show_logged_out_content();
             this.hide_popovers();
             $(".belownav").fadeIn(1000.);
+            $("#menu").fadeIn(1000.);
         }
         
         GlobalState.prototype.wait_for_proto_and_connect = function () {
