--- a/www/index.html
+++ b/www/index.html
@@ -211,6 +211,7 @@
         GlobalState.prototype.post_connect_load = function () {
             this.show_logged_out_content();
             this.hide_popovers();
+            this.refresh_captchas();
             $(".belownav").fadeIn(1000.);
             $("#menu").fadeIn(1000.);
         }
