--- a/www/request.html
+++ b/www/request.html
@@ -43,7 +43,7 @@
             <div style="text-align: center;">
                 <button type="button" class="btn btn-outline-success mx-auto" onclick="state.send_request()">Send
                     Email</button>
-                <button type="button" class="btn btn-outline-warning mx-auto" onclick="state.back();">Cancel</button>
+                <button type="button" class="btn btn-outline-warning mx-auto" onclick="window.history.back();">Cancel</button>
             </div>
             <br>
         </h1>
