--- a/www/policy.html
+++ b/www/policy.html
@@ -39,7 +39,7 @@
             <br>
             <br>
             <div style="text-align: center;">
-                <button type="button" class="btn btn-outline-success mx-auto" onclick="state.back();">Ok</button>
+                <button type="button" class="btn btn-outline-success mx-auto" onclick="window.history.back();">Ok</button>
             </div>
         </h1>
     </div>
