--- a/www/index.html
+++ b/www/index.html
@@ -677,9 +677,7 @@
                 $(function () {
                     $(page).popover({
                     container: 'body'
-                    }).fadeIn(1000, ()=>{
-                        state.refresh_content(page, message, subtext, opt_out);
-                    })
+                    }).fadeIn(1000)
                 });
                 $(pages.CLIENT_ERROR).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
@@ -692,7 +690,6 @@
                     container: 'body'
                     }).fadeIn(1000)
                 });
-                this.refresh_content(page, message, subtext, opt_out);
                 $(pages.PROCESSING).fadeOut(1000.);
                 $(pages.SERVER_ERROR).fadeOut(1000.);
             }
@@ -704,12 +701,12 @@
                     container: 'body'
                     }).fadeIn(1000)
                 });
-                this.refresh_content(page, message, subtext, opt_out);
                 $(pages.CLIENT_ERROR).fadeOut(1000.);
                 $(pages.PROCESSING).fadeOut(1000.);
             }
             else
                 window.location.hash = page;
+            this.refresh_content(page, message, subtext, opt_out);
         }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
