--- a/www/index.html
+++ b/www/index.html
@@ -706,6 +706,7 @@
             }
             else
                 window.location.hash = page;
+            this.refresh_content(page, message, subtext, opt_out);
         }
         var on_resources_loaded = function () {
             console.log($)//Show me the money
@@ -724,7 +725,7 @@
             $(pages.CLIENT_ERROR).fadeOut(1000.);
             $(pages.SERVER_ERROR).fadeOut(1000.);
             $(pages.PROCESSING).fadeOut(1000.);
-            this.refresh_content(page, message, subtext, opt_out);
+            this.refresh_content(window.location.hash);
         }
         
         GlobalState.prototype.hand_navigation = function () {
