--- a/www/index.html
+++ b/www/index.html
@@ -697,7 +697,7 @@
             {
                 $("#menu").fadeOut(1000.);
                 $(function () {
-                    $(new_page).popover({
+                    $(page).popover({
                     container: 'body'
                     }).fadeIn(1000)
                 });
