--- a/www/index.html
+++ b/www/index.html
@@ -731,7 +731,7 @@
         GlobalState.prototype.hand_navigation = function () {
             var page = (window.location.hash ? window.location.hash.substring(1) : "home") + '.html';
             console.log("FETCH PAGE: "+page);
-            $('.belownav').fadeOut(1000, function{
+            $('.belownav').fadeOut(1000, function(){
                 $.get(page, function (response) {
                     $('.belownav').html(response).fadeIn(1000, function(){
                         this.refresh_content(window.location.hash);
