--- a/www/policy.html
+++ b/www/policy.html
@@ -4,12 +4,12 @@
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
     <div class="col-12 col-sm-12 col-md-10 col-lg-8">
-        <br>
+        <h1 class="editable"
+            style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+            <a>Privacy Policy:</a>
+        </h1>
         <h1
             style="text-align:left; padding:5%; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-            Privacy Policy:
-            <br>
-            <br>
             1. Collected Information
             <br>
             <br>
