--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px; border: 1px solid #fff !important;">
 
-                        <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
+                        <iframe sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
                             src="canvas.html" id="preview_iframe"></iframe>
                     </div>
                 </div>
@@ -516,14 +516,6 @@
     window.html_editor.setValue('<!--Enter HTML here. -->');
     window.javascript_editor.setValue('//Enter JavaScript here.');
 
-
-    GlobalState.prototype.load_preview_iframe = function(onload_callback) {
-        iframe = document.getElementById("preview_iframe");
-        iframe.onload = onload_callback;
-        iframe.sandbox = "allow-scripts";
-        iframe.style.border = "1px solid #fff";
-        iframe.src = "canvas.html";
-    }
     GlobalState.prototype.mutex_checkboxes = function (checkboxes, global_change) {
         for (var i = 0; i < checkboxes.length; i++) {
             document.getElementById(checkboxes[i]).onclick = (function (checkboxes, i, global_change) {
@@ -2049,7 +2041,6 @@
 
     state.set_ui_algorithm(default_create_algorithm);
     state.compile_algorithm();
-    state.load_preview_iframe(function(){
-        state.compile_algorithm();
-    })
+    iframe = document.getElementById("preview_iframe");
+    state.compile_algorithm();
 </script>
