--- a/www/edit.html
+++ b/www/edit.html
@@ -17,7 +17,7 @@
                         style="height:512px; border: 1px solid #fff !important;">
 
                         <iframe sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-                            src="canvas.html" id="preview_iframe" onload="state.compile_algorithm"></iframe>
+                            src="canvas.html" id="preview_iframe" onload="state.compile_algorithm()"></iframe>
                     </div>
                 </div>
                 <br>
