--- a/www/index.html
+++ b/www/index.html
@@ -506,6 +506,7 @@
                         break;
                     case pages.EDIT:
                         this.refresh_captchas();
+                        this.compile_algorithm();
                         $("#menu").fadeIn(1000);
 
                         $("#home_button").removeClass("active")
